# mini_nginx

./: .pre-commit-config.yaml  Makefile  config.yaml  main.py  pyproject.toml
src/application/: metrics.py
src/domain/: config.py
src/infrastructure/: config_loader.py
src/infrastructure/server/: connection_handler.py  tcp_server.py
src/interfaces/: metrics_server.py
src/interfaces/http/: request_parser.py
tests/: test_server.py
